--- a/test/fuzztest/faceauthstub_fuzzer/BUILD.gn
+++ b/test/fuzztest/faceauthstub_fuzzer/BUILD.gn
@@ -16,7 +16,7 @@ import("//build/test.gni")
 
 ohos_fuzztest("FaceAuthStubFuzzTest") {
   branch_protector_ret = "pac_ret"
-  module_out_path = "face_auth/face_auth"
+  module_out_path = "face_auth/face_auth/concurrent"
   fuzz_config_file = "."
 
   cflags = [
